# linenoise

./: .gitignore  CMakeLists.txt  Makefile  linenoise.pc.in
.github/workflows/: build.yml  cmake-single-platform.yml
test/: CMakeLists.txt  test_1.c
